# opencliper

./: .gitignore  .gitmodules  CMakeLists.txt  Doxyfile  README  recon_fullySampled.mat  recon_halfScan.mat
LPISupport/: CMakeLists.txt
LPISupport/include/LPISupport/: InfoItems.hpp  LPISupport.hpp  LPISupportCommonDefs.hpp  PerfTestConfResult.hpp  ProgramConfig.hpp  SampleCollection.hpp  Timer.hpp  Utils.hpp
LPISupport/src/: InfoItems.cpp  PerfTestConfResult.cpp  ProgramConfig.cpp  SampleCollection.cpp  Utils.cpp
backward/: FindBackward.cmake
examples/: CMakeLists.txt  exec_mriRecon_100iter.sh  hipExample.cpp  simpleExample.cpp  simpleMRIRecon.cpp  simpleMRIReconSOS.cpp
hip/: cl2hip.cpp
include/OpenCLIPER/: .directory  CLapp.hpp  ConcreteNDArray.hpp  ConcreteNDArrayPrototypes.hpp  Data.hpp  DeviceDataProperties.hpp  InvalidDimension.hpp  KData.hpp  MatVarDimsData.hpp  MatVarInfo.hpp  NDArray.hpp  PerfTestConfResult.hpp  Process.hpp  ProcessCore.hpp  ProgramConfig.hpp  SamplingMasksData.hpp  SensitivityMapsData.hpp  SensitivityMapsRMS.hpp  TrajType.hpp  Trajectories.hpp  XData.hpp  buildconfig.hpp.in  cl2hip.hpp  defs.hpp  hostKernelFunctions.hpp
include/OpenCLIPER/kernels/: defs.h  hostKernelFunctions.h
include/OpenCLIPER/processes/: AdjointMotionCompensation.hpp  ApplyMask.hpp  Complex2Real.hpp  ComplexAbs.hpp  ComplexAbsPow2.hpp  ComplexElementProd.hpp  ComplexPow.hpp  FFT.hpp  GroupwiseRegistration.hpp  MemSet.hpp  MotionCompensation.hpp  NormalizeShow.hpp  RSoS.hpp  ReshapeShow.hpp  ScalarMultiply.hpp  SumReduce.hpp  XImageSum.hpp
include/OpenCLIPER/processes/examples/: Negate.hpp  SimpleMRIRecon.hpp  SimpleMRIReconSOS.hpp
include/OpenCLIPER/processes/groupwiseRegistration/: .directory
include/OpenCLIPER/processes/groupwiseRegistration/creabspline/: ControlPointsLocation.hpp  CreateBB.hpp  CreateBBg.hpp  PermuteBB.hpp  PermuteBBg.hpp  RepmatBBg.hpp
include/OpenCLIPER/processes/groupwiseRegistration/initialize/: CopyDataGPU.hpp  DataNormalization.hpp  InitZero.hpp  InitZeroRect.hpp  Initdx.hpp
include/OpenCLIPER/processes/groupwiseRegistration/optimizer/: .directory  AdjointInterpolator.hpp  AuxiliarCost.hpp  AuxiliarMask.hpp  Cost6D.hpp  Deformation.hpp  DeformationAdjust.hpp  Gradient.hpp  GradientInterpolator.hpp  GradientJointAux.hpp  GradientMetric.hpp  GradientRegularization.hpp  GradientWithSmoothTerms.hpp  Interpolator.hpp  Metric.hpp  PermuteTAux.hpp  PermutedV.hpp  Regularization.hpp  ShiftTAux.hpp  SumLambdaMetric.hpp  TransformationAux.hpp  UpdateTransformation.hpp
include/OpenCLIPER/processes/groupwiseRegistration/reductions/: Cost6DReduction.hpp  CostReduction.hpp  Reduction7Dto6D.hpp  ReductionSum.hpp
include/OpenCLIPER/processes/nesta/: NestaUp.hpp  TemporalTV.hpp  VectorNormalization.hpp
include/OpenCLIPER/processes/performanceTests/: ArrayAddProcess.hpp  ArrayMultProcess.hpp
patches/: clFFT_OpenCL22.patch  clFFT_offsets.patch  cvPlot-disable_normalization.patch  cvPlot-keep_old_windows.patch
performanceTests/: ArrayAddCUDA.cpp  ArrayMultCUDA.cpp  CMakeLists.txt  PerformanceTestArrayOpParallel.cpp  PerformanceTestArrayOpParallel.hpp  PerformanceTestArrayOpenCLIPER.cpp  PerformanceTestArrayOpenCLIPER.hpp  arrayAdd.cpp  arrayAddCUDA.cu  arrayAddCUDA.cuh  arrayAddOpenCLIPER.cpp  arrayMult.cpp  arrayMultCUDA.cu  arrayMultCUDA.cuh  arrayMultOpenCLIPER.cpp  commonArrayMult.cpp  commonArrayMult.hpp  vectorUtils.cpp  vectorUtils.hpp
src/: CLapp.cpp  ConcreteNDArray.cpp  Data.cpp  DeviceDataProperties.cpp  HostKernelFunctions.cpp  InvalidDimension.cpp  KData.cpp  KData.cpp.seg  MatVarDimsData.cpp  MatVarInfo.cpp  NDArray.cpp  PerfTestConfResult.cpp  Process.cpp  ProcessCore.cpp  ProgramConfig.cpp  SamplingMasksData.cpp  SensitivityMapsData.cpp  SensitivityMapsRMS.cpp  Trajectories.cpp  XData.cpp
src/kernels/: applyMask.cl  blankDataRows_kernel.cl  complexAbs.cl  complexAbsPow2.cl  complexElementProd.cl  complexPow.cl  creabspline.cl  hostKernelFunctions.cl  initialize.cl  internalKernels.cl  optimizer.cl  reductions.cl  rss.cl  temporalTV.cl  vectorNormalization.cl  xImageSum.cl
src/kernels/examples/: negate.cl
src/kernels/performanceTests/: arrayAdd.cl  arrayMult.cl
src/processes/: AdjointMotionCompensation.cpp  ApplyMask.cpp  Complex2Real.cpp  ComplexAbs.cpp  ComplexAbsPow2.cpp  ComplexElementProd.cpp  ComplexPow.cpp  FFT.cpp  GroupwiseRegistration.cpp  MemSet.cpp  MotionCompensation.cpp  NormalizeShow.cpp  RSoS.cpp  ReshapeShow.cpp  ScalarMultiply.cpp  SumReduce.cpp  XImageSum.cpp
src/processes/examples/: Negate.cpp  SimpleMRIRecon.cpp  SimpleMRIReconSOS.cpp
src/processes/groupwiseRegistration/: bspline.cpp  creabspline.cpp  optimizer.cpp
src/processes/groupwiseRegistration/creabspline/: ControlPointsLocation.cpp  CreateBB.cpp  CreateBBg.cpp  PermuteBB.cpp  PermuteBBg.cpp  RepmatBBg.cpp
src/processes/groupwiseRegistration/initialize/: CopyDataGPU.cpp  DataNormalization.cpp  InitZero.cpp  InitZeroRect.cpp  Initdx.cpp
src/processes/groupwiseRegistration/optimizer/: .directory  AdjointInterpolator.cpp  AuxiliarCost.cpp  AuxiliarMask.cpp  Cost6D.cpp  Deformation.cpp  DeformationAdjust.cpp  Gradient.cpp  GradientInterpolator.cpp  GradientJointAux.cpp  GradientMetric.cpp  GradientRegularization.cpp  GradientWithSmoothTerms.cpp  Interpolator.cpp  Metric.cpp  PermuteTAux.cpp  PermutedV.cpp  Regularization.cpp  ShiftTAux.cpp  SumLambdaMetric.cpp  TransformationAux.cpp  UpdateTransformation.cpp
src/processes/groupwiseRegistration/reductions/: Cost6DReduction.cpp  CostReduction.cpp  Reduction7Dto6D.cpp  ReductionSum.cpp
src/processes/nesta/: NestaUp.cpp  TemporalTV.cpp  VectorNormalization.cpp
src/processes/performanceTests/: ArrayAddProcess.cpp  ArrayMultProcess.cpp
tests/: CMakeLists.txt  MRIRecon.cpp  MRIReconMatlabTest.cpp  OpenCLIPER_clinfo.cpp  convTest.cpp  cuda_fftTest.cpp  fftTest.cpp  genFloatsBinaryFile.cpp  loadCFLTest.cpp  mat2cfl.cpp  showTest.cpp  simpleMatlabTest.cpp  simpleReadDimsAndKDataMatlabTest.cpp
