cmake_minimum_required(VERSION 2.8)
project(OpenCLIPER_tests)
set(${CMAKE_VERBOSE_MAKEFILE} 1)

# --------------------------------------------------------------
set (EXTRAFLAGS "-I.")

if (CMAKE_COMPILER_IS_GNUCXX)
  set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -Wall -std=gnu++11")
else ()
  set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS}  -std=c++11")
endif ()

# adding dependencies for executable
if (USE_BACKWARD_STACKTRACE)
    link_libraries(${BACKWARD_LIBRARIES} OpenCLIPER)
    add_executable(OpenCLIPER_clinfo OpenCLIPER_clinfo.cpp ${PROJECT_SOURCE_DIR}/../backward/backward.cpp)
    add_executable(simpleMatlabTest simpleMatlabTest.cpp ${PROJECT_SOURCE_DIR}/../backward/backward.cpp)
    add_executable(simpleReadDimsAndKDataMatlabTest simpleReadDimsAndKDataMatlabTest.cpp ${PROJECT_SOURCE_DIR}/../backward/backward.cpp)
    add_executable(MRIReconMatlabTest MRIReconMatlabTest.cpp ${PROJECT_SOURCE_DIR}/../backward/backward.cpp)
    add_executable(MRIRecon MRIRecon.cpp ../performanceTests/PerformanceTestArrayOpParallel.cpp ${PROJECT_SOURCE_DIR}/../backward/backward.cpp)
    add_executable(showTest showTest.cpp ${PROJECT_SOURCE_DIR}/../backward/backward.cpp)
    add_executable(fftTest fftTest.cpp ${PROJECT_SOURCE_DIR}/../backward/backward.cpp)
    add_executable(convTest convTest.cpp ${PROJECT_SOURCE_DIR}/../backward/backward.cpp)
    add_executable(loadCFLTest loadCFLTest.cpp ${PROJECT_SOURCE_DIR}/../backward/backward.cpp)
    add_executable(genFloatsBinaryFile genFloatsBinaryFile.cpp ${PROJECT_SOURCE_DIR}/../backward/backward.cpp)
    add_executable(mat2cfl mat2cfl.cpp ${PROJECT_SOURCE_DIR}/../backward/backward.cpp)
    if(BUILD_CUDA_TESTS)
	add_executable(cuda_fftTest cuda_fftTest.cpp)
    endif()
else()
    link_libraries(OpenCLIPER)
    add_executable(OpenCLIPER_clinfo OpenCLIPER_clinfo.cpp)
    add_executable(simpleMatlabTest simpleMatlabTest.cpp)
    add_executable(simpleReadDimsAndKDataMatlabTest simpleReadDimsAndKDataMatlabTest.cpp)
    add_executable(MRIReconMatlabTest MRIReconMatlabTest.cpp)
    add_executable(MRIRecon MRIRecon.cpp)
    add_executable(showTest showTest.cpp)
    add_executable(fftTest fftTest.cpp)
    add_executable(convTest convTest.cpp)
    add_executable(loadCFLTest loadCFLTest.cpp)
    add_executable(genFloatsBinaryFile genFloatsBinaryFile.cpp)
    add_executable(mat2cfl mat2cfl.cpp)
    if(BUILD_CUDA_TESTS)
	add_executable(cuda_fftTest cuda_fftTest.cpp)
    endif()
endif()

install(TARGETS OpenCLIPER_clinfo simpleMatlabTest MRIReconMatlabTest MRIRecon showTest fftTest loadCFLTest genFloatsBinaryFile mat2cfl
        RUNTIME DESTINATION bin)

# # Show all cmake variables
if (SHOW_CMAKE_VARIABLES)
    get_cmake_property(_variableNames VARIABLES)
    foreach (_variableName ${_variableNames})
        message(STATUS "${_variableName}=${${_variableName}}")
    endforeach()
endif()
